refactor: update project name references and fix build issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,10 +6,23 @@
 		"out": true
 	},
 	"typescript.tsdk": "node_modules/typescript/lib",
-	"cSpell.words": ["codybrom", "dqbd", "tiktoken", "unmark", "yarnrc"],
+	"cSpell.words": [
+		"codybrom",
+		"dqbd",
+		"esbuild",
+		"haml",
+		"ipynb",
+		"podspec",
+		"rodeoignore",
+		"tiktoken",
+		"unmark",
+		"xcconfig",
+		"yarnrc"
+	],
 	"gpt-context-generator.ignoreFiles": [
 		".gitignore",
 		".dockerignore",
-		".llmcontextignore"
-	]
+		".rodeoignore"
+	],
+	"cSpell.enabled": true
 }
