--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,4 +1,4 @@
-# Dependabot configuration for LLM Context Generator VSCode plugin
+# Dependabot configuration for Rodeo LLM Context Generator VSCode plugin
 
 version: 2
 updates:
