--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,17 @@
 	"compilerOptions": {
 		"module": "commonjs",
 		"target": "es2020",
-		"lib": ["es2020"],
+		"lib": [
+			"es2020"
+		],
 		"outDir": "out",
 		"sourceMap": true,
 		"rootDir": "src",
+		"esModuleInterop": true,
 		"strict": true
 	},
-	"exclude": ["node_modules", ".vscode-test"]
+	"exclude": [
+		"node_modules",
+		".vscode-test"
+	]
 }
