Migrate testing framework from Mocha to Jest with comprehensive test coverage
- Replace Mocha with Jest as the primary testing framework
- Add jest.config.js with comprehensive configuration including coverage settings
- Create extensive test suite covering all core functionality:
  - Commands: clearMarkedFiles, createContext, markFile
  - Generators: contextGenerator, simpleContextGenerator
  - Providers: markedFilesProvider
  - Utilities: fileUtils, ignoreUtils, importParser, markdownUtils, tokenUtils, vscodeUtils
  - Extension activation and core functionality
- Add VSCode and module mocks for Jest compatibility
- Update package.json scripts to use Jest (test, test:watch, test:coverage)
- Configure ESLint to ignore Jest mocks and configuration files
- Add VS Code testing configuration for improved development experience
- Update gitignore to exclude Jest coverage directory

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,5 +24,13 @@
 		".dockerignore",
 		".rodeoignore"
 	],
-	"cSpell.enabled": true
+	"cSpell.enabled": true,
+	"testing.automaticallyOpenPeekView": "failureInVisibleDocument",
+	"testing.defaultGutterClickAction": "run",
+	"testing.followRunningTest": true,
+	"testing.showAllMessages": false,
+	"jest.runMode": {
+		"coverage": true,
+		"type": "watch",
+	}
 }
