--- a/package.json
+++ b/package.json
@@ -262,34 +262,37 @@
 		"build": "esbuild src/extension.ts --bundle --outdir=out --platform=node --format=cjs --sourcemap --external:vscode && node -r esbuild-register src/build/copyWasm.ts",
 		"watch": "esbuild src/extension.ts --bundle --outdir=out --platform=node --format=cjs --sourcemap --external:vscode --watch",
 		"lint": "eslint src",
-		"pretest": "yarn run build && yarn run lint",
-		"test": "node ./out/test/runTest.js",
+		"pretest": "yarn run lint",
+		"test": "jest",
+		"test:watch": "jest --watch",
+		"test:coverage": "jest --coverage",
 		"vscode:package": "yarn run build && vsce package -o builds/rodeo-$npm_package_version.zip",
 		"vscode:publish": "yarn run build && vsce publish"
 	},
 	"dependencies": {
-		"@dqbd/tiktoken": "^1.0.21",
+		"@dqbd/tiktoken": "^1.0.22",
 		"highlight.js": "^11.11.1",
 		"ignore": "^7.0.5"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.32.0",
-		"@stylistic/eslint-plugin": "^5.2.2",
-		"@types/glob": "^8.1.0",
-		"@types/mocha": "^10.0.10",
-		"@types/node": "^24.1.0",
-		"@types/vscode": "^1.102.0",
-		"@typescript-eslint/eslint-plugin": "^8.38.0",
-		"@typescript-eslint/parser": "^8.38.0",
+		"@eslint/js": "^9.33.0",
+		"@stylistic/eslint-plugin": "^5.2.3",
+		"@types/jest": "^30.0.0",
+		"@types/node": "^24.3.0",
+		"@types/vscode": "^1.103.0",
+		"@typescript-eslint/eslint-plugin": "^8.40.0",
+		"@typescript-eslint/parser": "^8.40.0",
+		"@vscode/test-cli": "^0.0.11",
 		"@vscode/test-electron": "^2.5.2",
-		"esbuild": "^0.25.8",
+		"esbuild": "^0.25.9",
 		"esbuild-register": "^3.6.0",
-		"eslint": "^9.32.0",
+		"eslint": "^9.33.0",
 		"glob": "^11.0.3",
-		"mocha": "^11.7.1",
+		"jest": "^30.0.5",
 		"prettier": "^3.6.2",
-		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.38.0"
+		"ts-jest": "^29.4.1",
+		"typescript": "^5.9.2",
+		"typescript-eslint": "^8.40.0"
 	},
 	"prettier": {
 		"semi": true,
