feat: add smart mark/unmark functionality to explorer context menu
- Replace single "Mark for LLM Context" with intelligent "Mark/Unmark for LLM Context" command
- Automatically detects file selection state and provides appropriate actions
- Directly marks unmarked files without UI interruption
- Directly unmarks marked files without UI interruption
- Shows quick pick for mixed selections with contextual options
- Add comprehensive unmarkItems() method with directory support
- Include full test coverage for new functionality
- Maintain backward compatibility with existing commands

Users can now easily unmark files from LLM context via explorer right-click
without needing to restart VS Code.

Closes #83

--- a/package.json
+++ b/package.json
@@ -65,6 +65,14 @@
 			{
 				"command": "gpt-context-generator.markFilesFromExplorer",
 				"title": "Rodeo: Mark for LLM Context"
+			},
+			{
+				"command": "gpt-context-generator.unmarkFilesFromExplorer",
+				"title": "Rodeo: Unmark from LLM Context"
+			},
+			{
+				"command": "gpt-context-generator.smartMarkUnmarkFromExplorer",
+				"title": "Rodeo: Mark/Unmark for LLM Context"
 			}
 		],
 		"configuration": {
@@ -251,7 +259,7 @@
 			],
 			"explorer/context": [
 				{
-					"command": "gpt-context-generator.markFilesFromExplorer",
+					"command": "gpt-context-generator.smartMarkUnmarkFromExplorer",
 					"when": "explorerResourceIsFolder || resourceScheme == file",
 					"group": "1_debug@1"
 				}
