feat: add context generation for all open files and their imports
- Add "Generate LLM Context (All Open Files)" command for all currently open files
- Add "Generate LLM Context (All Open Files + Imports)" command for open files with dependencies
- Implement getAllOpenFilePaths() with smart filtering for Git diff/working tree tabs
- Add generateContextForOpenFilesWithImports() with deduplication logic
- Include comprehensive test coverage for both new commands
- Handle virtual file paths (Git diffs, working tree) by extracting actual file paths
- Provide user-friendly error messages for missing workspace or no open files

Resolves workflow issues when current "file + imports" option is insufficient
for multi-file work with reference materials and examples.

Closes #72

--- a/package.json
+++ b/package.json
@@ -73,6 +73,14 @@
 			{
 				"command": "gpt-context-generator.smartMarkUnmarkFromExplorer",
 				"title": "Rodeo: Mark/Unmark for LLM Context"
+			},
+			{
+				"command": "gpt-context-generator.createGPTFriendlyContextForAllOpenFiles",
+				"title": "Rodeo: Generate LLM Context (All Open Files)"
+			},
+			{
+				"command": "gpt-context-generator.createGPTFriendlyContextForAllOpenFilesWithImports",
+				"title": "Rodeo: Generate LLM Context (All Open Files + Imports)"
 			}
 		],
 		"configuration": {
