chore: release v2.0.0 - Rodeo rebrand
- Official rebrand to Rodeo with new lasso icon
- Add context generation for all open files (with/without imports)
- Add smart mark/unmark functionality
- Add configurable markdown handling (raw by default)
- Add configurable file path formatting
- Update README with new branding and features
- Breaking change: markdown files now included as raw by default

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,5 +32,9 @@
 	"jest.runMode": {
 		"coverage": true,
 		"type": "watch",
+	},
+	"markdownlint.config": {
+		"MD033": false,
+		"MD041": false
 	}
 }
