--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"description": "Generate LLM-ready Markdown code context from files and workspaces",
 	"version": "2.0.0",
 	"engines": {
-		"vscode": "^1.96.0"
+		"vscode": "^1.103.0"
 	},
 	"categories": [
 		"Machine Learning",
@@ -303,8 +303,9 @@
 		"test": "jest",
 		"test:watch": "jest --watch",
 		"test:coverage": "jest --coverage",
-		"vscode:package": "yarn run build && vsce package -o builds/rodeo-$npm_package_version.zip",
-		"vscode:publish": "yarn run build && vsce publish"
+		"package": "npm run build && npx @vscode/vsce package --out dist/gpt-context-generator-$npm_package_version.vsix",
+		"publish": "./scripts/publish.sh",
+		"release": "npm run package && npm run publish"
 	},
 	"dependencies": {
 		"@dqbd/tiktoken": "^1.0.22",
