--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"publisher": "codybrom",
 	"name": "gpt-context-generator",
 	"description": "Generate LLM-ready Markdown code context from files and workspaces",
-	"version": "2.0.0",
+	"version": "2.0.1",
 	"engines": {
 		"vscode": "^1.103.0"
 	},
@@ -13,7 +13,7 @@
 	],
 	"icon": "images/icon.png",
 	"galleryBanner": {
-		"color": "#1F5738",
+		"color": "#D4A574",
 		"theme": "dark"
 	},
 	"keywords": [
