fix: update gallery banner color in package.json

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	],
 	"icon": "images/icon.png",
 	"galleryBanner": {
-		"color": "#D4A574",
+		"color": "#583614",
 		"theme": "dark"
 	},
 	"keywords": [
